# delivery-time-prediction

./: .gitignore  EDA_report.md  LICENSE  PIPELINE_SUMMARY.md  README.md  error_insights.md  explainability.md  main.py  model_notes.md  pyproject.toml  run_api.py  strategic_reflections.md  test_pipeline.py
api/: __init__.py  app.py  config.py  models.py  predictor_service.py
data/: model_comparison_results.csv
model_pipeline/: README.md  __init__.py  config.py  feature_engineering.py  models.py  pipeline.py  predict.py  preprocessing.py  utils.py
model_pipeline/examples/: __init__.py  custom_pipeline.py  make_predictions.py  train_model.py
notebooks/: Assessment.ipynb  EDA.ipynb
sql/: sql_insights.md  sql_queries.sql
tests/: __init__.py  test_memory_efficiency.py  test_pipeline.py  test_prediction.py
